--- a/style.css
+++ b/style.css
@@ -71,10 +71,14 @@ table {
 }
 
 table, th, td {
-    border: 1px solid #ccc;
+    border: 1px solid grey;
 }
 
 th, td {
     padding: 10px;
     text-align: left;
+}
+
+tr th{
+    background-color: #ccc;
 }
